2014-11-26  Jason Merrill  <jason@redhat.com>

	* constexpr.c (cxx_eval_call_expression): Don't talk about
	flowing off the end if we're already non-constant.

2014-11-26  Ville Voutilainen  <ville.voutilainen@gmail.com>

	Diagnose string constant conversion to char* in c++11 and above
	as forbidden, not deprecated.
	* typeck.c (string_conv_p): Do a pedwarn in c++11 and above,
	change the diagnostic for the Wwrite-strings case for c++11 and above.

2014-11-24  Jason Merrill  <jason@redhat.com>

	* pt.c (lookup_template_variable): Always unknown_type_node.

2014-11-25  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/63786
	* parser.c (cp_parser_label_for_labeled_statement): Check the case
	with check_for_bare_parameter_packs.

2014-11-24  Jonathan Wakely  <jwakely@redhat.com>
	    Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/63203
	* decl.c (initialize_local_var): Add -Winit-self warning for
	references initialized with themselves.

2014-11-24  Jason Merrill  <jason@redhat.com>

	PR c++/63942
	* mangle.c (mangle_decl): If we aren't going to create a symbol
	alias, don't build the alias DECL either.

2014-11-24  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/63905
	* cp-tree.h (lang_decl_fn): Remove constructor_attr, destructor_attr.

2014-11-21  Jason Merrill  <jason@redhat.com>

	PR c++/63657
	PR c++/38958
	* call.c (set_up_extended_ref_temp): Set TREE_USED on the reference
	if the temporary has a non-trivial destructor.
	* decl.c (poplevel): Don't look through references.

	PR c++/63942
	* name-lookup.c (supplement_binding_1): Override a mangling alias.
	* mangle.c (maybe_remove_implicit_alias): New.
	(mangle_decl): Always avoid creating conflicting alias.
	* cp-tree.h: Adjust.

	PR c++/63849
	* mangle.c (decl_mangling_context): Use template_type_parameter_p.

	PR c++/63588
	* pt.c (uses_template_parms): Handle null argument.

2014-11-21  Jakub Jelinek  <jakub@redhat.com>

	PR target/63764
	* typeck.c (cp_build_array_ref): Adjust